--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -57,5 +57,6 @@ daarnaast ook nog beroep op aggregatieoperatoren.
 
 %\noindent {\bf\Large Trefwoorden}\\[1mm]
 \section*{Trefwoorden}
-content-based image retrieval, similariteitsmaten, vaagverzamelingen, aggregatieoperatoren
+similariteitsmaten voor kleurbeelden, vaagverzamelingen, content-based image retrieval, 
+beeld\-analyse
 
