--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -243,7 +243,7 @@ als $|A| = \sum_{x \in X} A(x) = \sum_{x \in X \setminus X'} 0 + \sum_{x \in X'}
 % |A| = \sum_{x \in X} A(x) = \sum_{x \in X \setminus X'} A(x) + \sum_{x \in X'} A(x) 
 % = \sum_{x \in X \setminus X'} 0 + \sum_{x \in X'} A(x) = \sum_{x \in X'} A(x)
 % \end{displaymath}
-Wanneer we voor elke $C$ uit $\mathcal{F}_L(X)$
+Wanneer we voor elke $C$ uit $\mathcal{F}(X)$
 \begin{displaymath}
 ||C|| = \sum_{x \in X'} C(x)
 \end{displaymath} 
@@ -284,7 +284,7 @@ Met behulp van de eigenschap
 \begin{displaymath}
 |C^c| = \sum_{x \in X} (1 - C(x)) = \sum_{x \in X} 1 - \sum_{x \in X} C(x) = |X| - |C|
 \end{displaymath}
-voor alle $C \in \mathcal{F}_L(X)$, vinden we bovendien:
+voor alle $C \in \mathcal{F}(X)$, vinden we bovendien:
 \begin{displaymath}
 \begin{array}{l@{\ =\ }l@{\ =\ }l@{\ =\ }l}
 |A^c \cap B^c| & |(A \cup B)^c| & |X| - |A \cup B| & |X| - ||A \cup B|| \\[4pt]
