--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -116,7 +116,7 @@
 	author		= {Vertan, C. and Boujemaa, N.},
 	title		= {Upgrading Color Distributions for Image Retrieval: can we do better?},
 	booktitle   = {Proceedings of the 4th International Conference on Advances in Visual Information Systems},
-  	pages     	= {178 - 188},
+  	pages     	= {178--188},
   	year     	= 2000,
 }
  
@@ -254,7 +254,7 @@
     author 		= {Stricker, M. and Orengo, M.},
     title 		= {Similarity of Color Images},
     booktitle 	= {Storage and Retrieval for Image and Video Databases ({SPIE})},
-    pages 		= {381-392},
+    pages 		= {381--392},
     year 		= 1995,
 }
 
@@ -298,7 +298,7 @@
 @Article{stricker:fuzzy_regions_for_image_indexing,
 	author		= {Stricker, M. and Dimai, A.},
 	title		= {Spectral Covariance and Fuzzy Regions for Image Indexing},
-	pages		= {66-73},
+	pages		= {66--73},
 	year		= 1997,
 	journal		= {Machine Vision and Applications},
 	volume		= 10,
@@ -341,4 +341,14 @@
   	title 		= {Efficient Image Retrieval with Statistical Color Descriptors},
   	school 		= {Link\"oping University},
   	year 		= 2003,
+}
+
+@Article{kohonen:intro_to_neural_networks,
+	author		= {Kohonen, T.},
+	title		= {An introduction to neural networks},
+	pages		= {3--16},
+	year		= 1988,
+	journal		= {Neural Networks},
+	volume		= 1,
+	number		= 1,
 }
