--- a/Thesis/slotbeschouwingen.tex
+++ b/Thesis/slotbeschouwingen.tex
@@ -9,13 +9,14 @@ onderzoekmogelijkheden.
 De basisidee achter deze scriptie is het identificeren van beelden
 met vaagverzamelingen, zodanig dat vaagsimilariteitsmaten kunnen gebruikt worden
 om de graduele gelijkenis tussen twee beelden na te gaan. 
-We construeren similariteitsmaten voor beelden door een manier om beelden te
-identificeren met vaagverzamelingen te combineren met een vaagsimilariteitsmaat.
+We gebruiken die idee om similariteitsmaten voor beelden te construeren.
+%We construeren similariteitsmaten voor beelden door een manier om beelden te
+%identificeren met vaagverzamelingen te combineren met een vaagsimilariteitsmaat.
 Een eerste bijdrage van dit eindwerk is het herschrijven van de beschouwde
 vaagsimilariteitsmaten naar een vorm die, onder bepaalde voorwaarden, een stuk
-sneller kan berekend worden. 
+sneller kan berekend worden. Op basis van die herschreven vaagsimilariteitsmaten
+hebben we twee types van similariteitsmaten ge\"implementeerd.
 
-We hebben twee types van similariteitsmaten besproken.
 De maten van het eerste type, waarbij het universum bestaat uit beeldpunten, 
 noemen we pixelgebaseerde similariteitsmaten. Similariteitsmaten die 
 beelden rechtstreeks interpreteren als vaagverzamelingen en vervolgens 
